# jaxeigs

./: .gitignore  README.md  jaxeig.py  jaxeigs.py  pyproject.toml  test.py
eigensolver/: __init__.py  cpu_eig.py  interface.py  jax_backend.py  jitted_functions.py
jax_eigensolver/: README.md  test.py
jax_eigensolver/eigensolver/: jax_backend.py  jitted_functions.py
jaxeigs/: call_lapack.py  gram_schmit.py  jaxeigs.py  lanczos.py  rand.py
tests/: test_jax_backend.py  test_jitted_functions.py
